--- a/package.json
+++ b/package.json
@@ -34,5 +34,16 @@
     "singleQuote": true,
     "jsxBracketSameLine": true
   },
-  "files": ["dist"]
+  "files": ["dist"],
+  "dependencies": {
+    "clamp": "1.0.1",
+    "color-luminance": "2.1.0",
+    "gl-vec2": "1.2.0",
+    "lerp": "1.0.3",
+    "new-array": "1.0.0",
+    "raf-loop": "1.1.3",
+    "seed-random": "2.2.0",
+    "simplex-noise": "2.4.0",
+    "smoothstep": "1.0.1"
+  }
 }
