--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,9 @@
     "comma-dangle": [2, "never"],
     "global-require": 0,
     "import/no-extraneous-dependencies": 0,
+    "no-console": 0,
     "no-mixed-operators": 0,
+    "react/jsx-closing-bracket-location": 0,
     "react/jsx-filename-extension": 0
   }
 }
