--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-eslint": "8.2.2",
-    "babel-preset-react-app": "3.1.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.10.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.7.0",
-    "material-colors": "1.2.5",
     "react": "16.3.1",
     "react-dom": "16.3.1",
     "react-scripts": "1.1.4"
@@ -28,7 +28,7 @@
     "build": "NODE_ENV=production babel src/lib --out-dir dist"
   },
   "babel": {
-    "presets": ["react-app"]
+    "presets": ["es2015", "react", "stage-0"]
   },
   "prettier": {
     "singleQuote": true,
@@ -41,6 +41,7 @@
     "gl-vec2": "1.2.0",
     "lerp": "1.0.3",
     "new-array": "1.0.0",
+    "prop-types": "^15.6.1",
     "raf-loop": "1.1.3",
     "seed-random": "2.2.0",
     "simplex-noise": "2.4.0",
