--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-cli": "6.26.0",
     "babel-eslint": "8.2.2",
     "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
@@ -25,16 +26,23 @@
   "scripts": {
     "start": "react-scripts start",
     "lint": "eslint .",
+    "prebuild": "rm -rf dist",
     "build": "NODE_ENV=production babel src/lib --out-dir dist"
   },
   "babel": {
-    "presets": ["es2015", "react", "stage-0"]
+    "presets": [
+      "es2015",
+      "react",
+      "stage-0"
+    ]
   },
   "prettier": {
     "singleQuote": true,
     "jsxBracketSameLine": true
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "clamp": "1.0.1",
     "color-luminance": "2.1.0",
