--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-import": "2.10.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.7.0",
+    "file-saver": "1.3.8",
     "react": "16.3.1",
     "react-dom": "16.3.1",
     "react-scripts": "1.1.4"
