--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.7.0",
     "file-saver": "1.3.8",
+    "gh-pages": "1.1.0",
     "material-ui": "1.0.0-beta.41",
     "react": "16.3.1",
     "react-dom": "16.3.1",
@@ -31,9 +32,8 @@
     "lint": "eslint .",
     "prebuild": "rm -rf dist",
     "build": "NODE_ENV=production babel src/lib --out-dir dist",
-    "prehosting": "rm -rf docs",
-    "hosting": "react-scripts build",
-    "posthosting": "mv build docs"
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "babel": {
     "presets": ["es2015", "react", "stage-0"]
