--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "material-ui": "1.0.0-beta.41",
     "react": "16.3.1",
     "react-dom": "16.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-transition-group": "2.3.0",
+    "styled-components": "3.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
