--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   "devDependencies": {
     "@material-ui/icons": "1.0.0-beta.42",
     "babel-cli": "6.26.0",
-    "babel-eslint": "8.2.2",
+    "babel-eslint": "8.2.3",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
-    "eslint-plugin-import": "2.10.0",
+    "eslint-plugin-import": "2.11.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.7.0",
     "file-saver": "1.3.8",
     "gh-pages": "1.1.0",
     "material-ui": "1.0.0-beta.41",
     "react": "16.3.1",
+    "react-animated-transitions": "0.0.1",
     "react-dom": "16.3.1",
     "react-scripts": "1.1.4",
     "styled-components": "3.2.5"
