--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "gh-pages": "1.1.0",
     "material-ui": "1.0.0-beta.41",
     "react": "16.3.1",
-    "react-animated-transitions": "0.0.2",
+    "react-animated-transitions": "0.0.5",
     "react-dom": "16.3.1",
     "react-scripts": "1.1.4",
+    "react-transition-group": "2.3.1",
     "styled-components": "3.2.5"
   },
   "scripts": {
